[gd_scene load_steps=16 format=3 uid="uid://byg6xjjjpdp1o"]

[ext_resource type="Script" uid="uid://fwjf42gvfgrd" path="res://scenes/ui/gameplay/overlay.gd" id="1_btfje"]
[ext_resource type="Theme" uid="uid://cqid6eqdw6f54" path="res://scenes/ui/ui.tres" id="2_gdab8"]
[ext_resource type="Texture2D" uid="uid://dvoyhjvyn362q" path="res://assets/graphics/backgrounds/game_over.png" id="3_1vlkb"]
[ext_resource type="Texture2D" uid="uid://cypbj03ti1omf" path="res://assets/graphics/misc/menu_button.png" id="3_58yyj"]
[ext_resource type="Texture2D" uid="uid://du50sjms5y6q4" path="res://assets/graphics/animals/cow_icon.png" id="3_qvqcw"]
[ext_resource type="Texture2D" uid="uid://cubiewu46bffv" path="res://assets/graphics/misc/game_over_text.png" id="4_67tsj"]
[ext_resource type="Texture2D" uid="uid://14pfdwuwlyrm" path="res://assets/graphics/misc/menu_button_hovering.png" id="4_vc0qd"]
[ext_resource type="Shader" path="res://scenes/ui/background_blur.gdshader" id="6_wlrjj"]
[ext_resource type="AudioStream" uid="uid://b44jxbnwfu724" path="res://assets/audio/sfx/failure.wav" id="9_67tsj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1vlkb"]
shader = ExtResource("6_wlrjj")
shader_parameter/amount = 2.0

[sub_resource type="Animation" id="Animation_gwk6t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoundEnd/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RoundEnd:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RoundEnd/ColorRect/PowerupOptions:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RoundEnd/ColorRect/PowerupOptions:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RoundEnd/Box/RoundOver:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RoundEnd/Box/TimeLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RoundEnd/Box/RoundOver:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RoundEnd/Box/TimeLeft:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RoundEnd/Box/MaxCombo:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RoundEnd/Box/MaxCombo:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("RoundEnd/Box:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("GameOver:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("GameOver:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1ndix"]
resource_name = "Slide"
length = 3.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoundEnd/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.366022, 0.366),
"update": 0,
"values": [Vector2(1920, 0), Vector2(1920, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RoundEnd:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RoundEnd/ColorRect/PowerupOptions:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.66667, 2.8),
"transitions": PackedFloat32Array(1, 1.03526, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RoundEnd/ColorRect/PowerupOptions:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.66667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RoundEnd/Box/RoundOver:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RoundEnd/Box/TimeLeft:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RoundEnd/Box/RoundOver:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.727799, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RoundEnd/Box/TimeLeft:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.5, 2.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("RoundEnd/Box/MaxCombo:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RoundEnd/Box/MaxCombo:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.5, 2.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("RoundEnd/Box:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.7278, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bma8u"]
resource_name = "Slide_out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoundEnd/ColorRect/PowerupOptions:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1.03526),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RoundEnd/ColorRect/PowerupOptions:visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RoundEnd/Box/RoundOver:visible")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RoundEnd/Box/TimeLeft:visible")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RoundEnd/Box/RoundOver:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RoundEnd/Box/TimeLeft:modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RoundEnd/Box/MaxCombo:visible")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RoundEnd/Box/MaxCombo:modulate")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0gun3"]
resource_name = "game_over"
length = 3.7
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOver/AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_67tsj")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjfbv"]
_data = {
&"RESET": SubResource("Animation_gwk6t"),
&"Slide": SubResource("Animation_1ndix"),
&"Slide_out": SubResource("Animation_bma8u"),
&"game_over": SubResource("Animation_0gun3")
}

[node name="Overlay" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_btfje")

[node name="GameOver" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 180.0
offset_right = -1440.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("3_1vlkb")

[node name="BlackBar1" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="BlackBar2" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = 960.0
offset_bottom = 180.0
grow_horizontal = 2
texture = ExtResource("4_67tsj")
stretch_mode = 5

[node name="MenuButton" type="TextureButton" parent="GameOver"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -154.0
offset_right = -136.0
offset_bottom = -122.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
texture_normal = ExtResource("3_58yyj")
texture_hover = ExtResource("4_vc0qd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameOver"]

[node name="RoundEnd" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_gdab8")

[node name="ColorRect" type="ColorRect" parent="RoundEnd"]
material = SubResource("ShaderMaterial_1vlkb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="PowerupOptions" type="VBoxContainer" parent="RoundEnd/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = 52.0
offset_right = 268.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(268, 151)

[node name="Options" type="HBoxContainer" parent="RoundEnd/ColorRect/PowerupOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Option1" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "opt 1"
icon = ExtResource("3_qvqcw")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/powerup_type = 0

[node name="Option2" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "opt 2"
icon = ExtResource("3_qvqcw")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/powerup_type = 0

[node name="Option3" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "opt 3"
icon = ExtResource("3_qvqcw")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
metadata/powerup_type = 0

[node name="Descriptions" type="HBoxContainer" parent="RoundEnd/ColorRect/PowerupOptions"]
layout_mode = 2

[node name="Option1" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Descriptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 18
disabled = true
text = "Text"
autowrap_mode = 3
metadata/powerup_type = 0

[node name="Option2" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Descriptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 18
disabled = true
text = "Text"
autowrap_mode = 3
metadata/powerup_type = 0

[node name="Option3" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/Descriptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 18
disabled = true
text = "Text"
autowrap_mode = 3
metadata/powerup_type = 0

[node name="ValueChanges" type="HBoxContainer" parent="RoundEnd/ColorRect/PowerupOptions"]
layout_mode = 2

[node name="Option1" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/ValueChanges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 22
disabled = true
text = "X -> X"
metadata/powerup_type = 0

[node name="Option2" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/ValueChanges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 22
disabled = true
text = "X -> X"
metadata/powerup_type = 0

[node name="Option3" type="Button" parent="RoundEnd/ColorRect/PowerupOptions/ValueChanges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_font_sizes/font_size = 22
disabled = true
text = "X -> X"
metadata/powerup_type = 0

[node name="Box" type="ColorRect" parent="RoundEnd"]
layout_mode = 0
offset_left = 641.0
offset_top = 152.0
offset_right = 1306.0
offset_bottom = 424.0
color = Color(0, 0, 0, 0.392157)

[node name="RoundOver" type="Label" parent="RoundEnd/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -138.5
offset_right = 270.0
offset_bottom = -14.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gdab8")
theme_override_colors/font_color = Color(0.462878, 1, 0.277052, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -7
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 123
text = "Round Over!"

[node name="TimeLeft" type="Label" parent="RoundEnd/Box"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -327.5
offset_top = 123.0
offset_right = 324.5
offset_bottom = 191.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.462878, 1, 0.277052, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -7
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 67
text = "Cleared in:"
horizontal_alignment = 1
autowrap_mode = 1

[node name="MaxCombo" type="Label" parent="RoundEnd/Box"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -323.5
offset_top = 196.0
offset_right = 296.5
offset_bottom = 264.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.462878, 1, 0.277052, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -7
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 67
text = "Max combo:"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xjfbv")
}

[connection signal="pressed" from="GameOver/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="RoundEnd/ColorRect/PowerupOptions/Options/Option1" to="." method="_on_option_pressed" binds= ["Option1"]]
[connection signal="pressed" from="RoundEnd/ColorRect/PowerupOptions/Options/Option2" to="." method="_on_option_pressed" binds= ["Option2"]]
[connection signal="pressed" from="RoundEnd/ColorRect/PowerupOptions/Options/Option3" to="." method="_on_option_pressed" binds= ["Option3"]]
